--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DATABASE_NAME=blog
 DATABASE_USER=blog_user
 DATABASE_PASSWORD=blog_user
 DATABASE_PORT=5433
-JWT_SECRET=
+JWT_SECRET=e14ec713-b091-47d2-a649-f9b085ab9c6f
