--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           --health-retries=10
 
     env:
-      IMAGE_NAME: brunomfreitas/blog-app
+      IMAGE_NAME: blog-app
 
     permissions:
       contents: read
