--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DATABASE_USER=blog_user
 DATABASE_PASSWORD=blog_password
 DATABASE_PORT=5433
 JWT_SECRET=e14ec713-b091-47d2-a649-f9b085ab9c6f
+JWT_EXPIRES_IN=1d
