--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "npm init -y",
   "main": "server.ts",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsup src/server.ts --out-dir dist --format cjs",
+    "dev": "tsx -r tsconfig-paths/register watch src/server.ts",
+    "build": "tsc && tsc-alias && node scripts/generate-swagger.cjs",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -20,18 +20,21 @@
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.26",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
-    "typescript": "^4.9.5"
+    "typescript": "^5.9.3"
   }
 }
