--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 PORT=
-ENV=
+NODE_ENV=
 DATABASE_USER=
 DATABASE_HOST=
 DATABASE_NAME=
 DATABASE_PASSWORD=
 DATABASE_PORT=
 JWT_SECRET=
+JWT_EXPIRES_IN=
