--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "npm init -y",
   "main": "server.ts",
   "scripts": {
-	"dev": "tsx watch -r tsconfig-paths/register src/server.ts",
+    "dev": "tsx watch -r tsconfig-paths/register src/server.ts",
     "build": "tsc && tsc-alias && node scripts/generate-swagger.cjs",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest",
+    "test:test": "NODE_ENV=test jest --passWithNoTests",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +30,16 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "jest": "^30.2.0",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
